[package]
name = "hyprland-desktop-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "libloaderapi",
    "errhandlingapi",
    "impl-default",
    "minwindef",
    "windef"
] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
] }
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 